--- a/css/sample.css
+++ b/css/sample.css
@@ -2,7 +2,7 @@
 	font-family: 'Roboto', sans-serif;
 }
 #background-container{
-	width:100vw;
+	width:100%;
 	height:100vh;
 	background: #721D93;
     background-image: url("../img/mesh-for-web.png");	
