--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -3,7 +3,8 @@
 }
 #background-container{
 	width:100%;
-	height:100vh;
+	height:100%;
+	minheight:200px;
 	background: #721D93;
     background-image: url("../img/mesh-for-web.png");	
     background-image: url("../img/mesh-for-web.png"), -webkit-gradient(linear, left top, left bottom, color-stop(0, #721D93), color-stop(1, #17A7F4));
