--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -1,10 +1,15 @@
 *{
 	font-family: 'Roboto', sans-serif;
 }
-#background-container{
+
+html{
+  height: 100%;
+}
+
+body {
 	width:100%;
 	height:100%;
-	min-height:200px;
+	min-height:100%;
 	background: #721D93;
     background-image: url("../img/mesh-for-web.png");	
     background-image: url("../img/mesh-for-web.png"), -webkit-gradient(linear, left top, left bottom, color-stop(0, #721D93), color-stop(1, #17A7F4));
