--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -2,14 +2,10 @@
 	font-family: 'Roboto', sans-serif;
 }
 
-html{
-  height: 100%;
-}
-
-body {
+#background-container{
 	width:100%;
 	height:100%;
-	min-height:100%;
+	min-height:200px;
 	background: #721D93;
     background-image: url("../img/mesh-for-web.png");	
     background-image: url("../img/mesh-for-web.png"), -webkit-gradient(linear, left top, left bottom, color-stop(0, #721D93), color-stop(1, #17A7F4));
