fixed body blank

--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -1,11 +1,14 @@
 *{
 	font-family: 'Roboto', sans-serif;
 }
-
+html, body {
+    height: 100%; /* IMPORTANT!!! stretches viewport to 100% */
+}
 #background-container{
-	width:100%;
-	height:100%;
-	min-height:200px;
+	min-height: 100%; /* min. height for modern browser */
+    height:auto !important; /* important rule for modern Browser */
+    height:100%; /* min. height for IE */
+    overflow: hidden !important; /* FF scroll-bar */
 	background: #721D93;
     background-image: url("../img/mesh-for-web.png");	
     background-image: url("../img/mesh-for-web.png"), -webkit-gradient(linear, left top, left bottom, color-stop(0, #721D93), color-stop(1, #17A7F4));
