--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -10,6 +10,7 @@ html, body {
     height:100%; /* min. height for IE */
     overflow: hidden !important; /* FF scroll-bar */
 	background: #721D93;
+	min-width:320px;
     background-image: url("../img/mesh-for-web.png");	
     background-image: url("../img/mesh-for-web.png"), -webkit-gradient(linear, left top, left bottom, color-stop(0, #721D93), color-stop(1, #17A7F4));
     background-image: url("../img/mesh-for-web.png"), -o-linear-gradient(bottom, #721D93 0%, #17A7F4 100%);
