--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -83,3 +83,7 @@ html, body {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+    display: none !important;
+}
