--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -9,12 +9,11 @@ html, body {
     min-height: 100%; /* min. height for modern browser */
     height:auto !important; /* important rule for modern Browser */
     height:100%; /* min. height for IE */
-    overflow: hidden !important; /* FF scroll-bar */
+/*    overflow: hidden !important; /* FF scroll-bar */*/
     min-width:320px;
-    background-repeat:repeat-x;
-    background: #721D93 url("../img/mesh-for-web.png");
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00721D93', endColorstr='#FF17A7F4') progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/mesh-for-web.png');
-    -ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorstr='#00721D93', endColorstr='#FF17A7F4') progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/mesh-for-web.png')";
+    background: #721D93 url("../img/mesh-for-web.png") repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00721D93', endColorstr='#FF17A7F4');
+    -ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorstr='#00721D93', endColorstr='#FF17A7F4')";
 }
 
 .background-container{
@@ -54,13 +53,14 @@ html, body {
 	font-size:x-large;
 }
 .table-header th{
-	background-color:rgb(252, 252, 252);
-	color:rgba(94, 0, 126, 0.8);
+	background-color:#FCFCFC;
+	color:#5E007E;
 	font-size:small;
 	font-weight: 400;
 }
 .table-header th{
 	opacity:.8;
+	filter: progid:DXImageTransform.Microsoft.Alpha(opacity=80);
 }
 .table-box {
 	color:white;
